# acm-ai-qe

./: .coderabbit.yaml  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  context.md
.claude/: settings.json  settings.local.json  settings.local.json.example  statusline.sh
.claude-plugin/: marketplace.json  plugin.json
commands/: README.md
docs/: CONTEXT-MD-SPECIFICATION.md  GRILL-WITH-DOCS-PORTABLE-SKILL-AND-CONTEXT-SPECIFICATION.md  developer-guide.md  mcp-setup-guide.md  skill-architecture.md  skill-authoring-guide.md  skill-compliance-report.md
mcp/: README.md  acm-search-proxy.py  deploy-acm-search.sh  jenkins-acm-tools.py  setup.sh  verify.py
mcp/acm-source-mcp-server/: README.md  pyproject.toml
mcp/acm-source-mcp-server/acm_source_mcp_server/: __init__.py  config.py  github.py  main.py  server.py
mcp/acm-source-mcp-server/acm_source_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp/acm-source-mcp-server/acm_source_mcp_server/tools/: __init__.py  cluster.py  search.py  selectors.py  source.py  version.py
mcp/acm-source-mcp-server/docs/: ACM-Source-MCP-Server-Documentation.md
mcp/acm-ui-mcp-server/: README.md  pyproject.toml
mcp/acm-ui-mcp-server/acm_ui_mcp_server/: analyzer.py  gh_client.py  server.py
mcp/acm-ui-mcp-server/docs/: ACM-UI-MCP-Server-Documentation.md
repos/: repos.yaml
scripts/: lint.sh  test-skill-paths.sh  validate-readmes.sh
skills/: README.md
solutions/: README.md  carbon-to-patternfly-selectors.md  obs-namespace-cleanup.md  propagator-tls-cert-corruption.md  (+3 more)
(+796 files in other folders)
