[project]
name = "acm-source-mcp-server"
version = "0.2.0"
description = "MCP server for ACM source code exploration via GitHub"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
acm-source-mcp-server = "acm_source_mcp_server.main:main"
