[project]
name = "acm-ui-mcp-server"
version = "0.1.0"
description = "MCP server for ACM UI knowledge base"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
acm-ui-mcp-server = "acm_ui_mcp_server.main:main"
